--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -24,8 +24,7 @@
 [[inputs.mqtt_consumer]]
   servers = ["tcp://mosquitto:1883"]
   topics = [
-    "home/energy/+/power",
-    "home/energy/+/status"
+    "home/energy/+/power"
   ]
   data_format = "json"
   
